--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+astroid==1.6.4
+autopep8==1.3.5
 click==6.7
 Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gunicorn==19.8.1
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
+pycodestyle==2.4.0
+pylint==1.9.1
+six==1.11.0
+SQLAlchemy==1.2.7
 Werkzeug==0.14.1
-
+wrapt==1.10.11
+WTForms==2.1
