--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+psycopg2==2.7.4
 pycodestyle==2.4.0
 pylint==1.9.1
 six==1.11.0
