--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==1.6.4
 autopep8==1.3.5
 click==6.7
 Flask==1.0.2
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.8.1
